--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <title>Fokus-Morgenreflexion – Journal</title>
+  <title>Fokus-Morgenreflexion Journal</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background-color: #f4f4f4; color: #333; }
     .layout { display: flex; min-height: 100vh; }
