--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     .sidebar h2 {
       font-size: 1.2rem;
       margin-bottom: 1rem;
+      color: #ffffff;
     }
     .filter {
       margin-bottom: 1rem;
